--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,19 @@
 [project]
 name="caen-tools"
-version="0.0.1"
+version="0.0.2"
+requires-python=">=3.11"
 dependencies=[
-    "fastapi",
+    "pyzmq==25.1.1",
+    "caen-setup @ git+ssh://git@github.com/caenHV/Setup.git@main",
 ]
 
 [project.scripts]
 caen_device_backend = "caen_tools.DeviceBackend.back:main"
 caen_proxy = "caen_tools.ProxyService.proxy:main"
 caen_client = "caen_tools.ConsoleClient.client:main"
+
+[project.optional-dependencies]
+webservice=[
+    "fastapi==0.104.1",
+    "uvicorn==0.23.2",
+]
