--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version="0.0.2"
 requires-python=">=3.11"
 dependencies=[
     "pyzmq==25.1.1",
-    "caen-setup @ git+ssh://git@github.com/caenHV/Setup.git@main",
+    "caen-setup @ git+https://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@github.com/caenHV/Setup.git@main",
 ]
 
 [project.scripts]
