--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,17 @@
 [project]
 name="caen-tools"
-version="0.0.2"
+version="0.0.3"
 requires-python=">=3.11"
 dependencies=[
     "pyzmq==25.1.1",
-    "caen-setup @ git+https://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@github.com/caenHV/Setup.git@main",
+    "caen-setup @ git+https://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@github.com/caenHV/Setup.git@dev",
 ]
 
 [project.scripts]
 caen_device_backend = "caen_tools.DeviceBackend.back:main"
 caen_proxy = "caen_tools.ProxyService.proxy:main"
 caen_client = "caen_tools.ConsoleClient.client:main"
+caen_monitor = "caen_tools.MonitorService.monitor:main"
 
 [project.optional-dependencies]
 webservice=[
