Implement configs in the scripts

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,20 @@
 [proxy]
-address = tcp://localhost:5559
+input_port = 5559
+output_port = 5560
+monitor_port = 5561
+protocol = tcp
+host = localhost
 
 [monitor]
 dbpath = ./monitor.db
-refreshtime = 20 
+refreshtime = 40 
+proxy_address = ${proxy:protocol}://${proxy:host}:${proxy:input_port}
 # refreshtime in seconds
+
+[device]
+map_config = ./test_config.json
+proxy_address = ${proxy:protocol}://${proxy:host}:${proxy:output_port}
+
+[webservice]
+querylimit = 10
+proxy_address = ${proxy:protocol}://${proxy:host}:${proxy:input_port}
