--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version="0.0.4"
 requires-python=">=3.11"
 dependencies=[
     "pyzmq==25.1.1",
-    "caen-setup @ git+https://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@github.com/caenHV/Setup.git@dev",
+    "caen-setup @ git+https://github.com/caenHV/Setup.git@dev",
 ]
 
 [project.scripts]
