--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version="0.0.4"
 requires-python=">=3.11"
 dependencies=[
     "pyzmq==25.1.1",
-    "caen-setup @ git+https://github.com/caenHV/Setup.git@dev",
+    "caen-setup @ git+https://github.com/caenHV/Setup.git@main",
 ]
 
 [project.scripts]
