--- a/config.ini
+++ b/config.ini
@@ -12,9 +12,13 @@ proxy_address = ${proxy:protocol}://${proxy:host}:${proxy:input_port}
 # refreshtime in seconds
 
 [device]
+identity = device_backend
 map_config = ./test_config.json
-proxy_address = ${proxy:protocol}://${proxy:host}:${proxy:output_port}
+host = localhost
+protocol = tcp
+port = 5570
+address = ${protocol}://*:${port}
 
-[webservice]
-querylimit = 10
-proxy_address = ${proxy:protocol}://${proxy:host}:${proxy:input_port}
+[ws]
+receive_time = 20
+proxy_address = ${device:protocol}://${device:host}:${device:port}
