Refactored/remade Monitor microservice (not checked yet)

--- a/config.ini
+++ b/config.ini
@@ -7,9 +7,13 @@ host = localhost
 
 [monitor]
 dbpath = ./monitor.db
-refreshtime = 1 
-proxy_address = ${proxy:protocol}://${proxy:host}:${proxy:input_port}
-# refreshtime in seconds
+channel_map_path = ./channel_map.json
+host = localhost
+protocol = tcp
+port = 5561
+address = ${protocol}://*:${port}
+# in seconds
+max_interlock_check_delta_time = 100
 
 [device]
 identity = device_backend
