--- a/config.ini
+++ b/config.ini
@@ -16,13 +16,14 @@ address = ${protocol}://*:${port}
 max_interlock_check_delta_time = 100
 
 [device]
-identity = device_backend
-map_config = ./test_config.json
-host = localhost
 protocol = tcp
+host = localhost
 port = 5570
 address = ${protocol}://*:${port}
 
+map_config = ./test_config.json
+
 [ws]
 receive_time = 20
-proxy_address = ${device:protocol}://${device:host}:${device:port}
+device_backend = ${device:protocol}://${device:host}:${device:port}
+monitor = ${monitor:protocol}://${monitor:host}:${monitor:port}
