Modified ODB handler: Added Interlock reading, writing to ODB and deleting of old records (>24h ago).

--- a/config.ini
+++ b/config.ini
@@ -7,6 +7,7 @@ host = localhost
 
 [monitor]
 dbpath = ./monitor.db
+param_file_path = /home/cmd3daq/caendc/data/last_measurement.json
 channel_map_path = ./channel_map.json
 host = localhost
 protocol = tcp
