--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ requires-python=">=3.11"
 dependencies=[
     "pyzmq==25.1.1",
     "caen-setup @ git+https://github.com/caenHV/Setup.git@dev",
+    "psycopg2==2.9.9"
 ]
 
 [project.scripts]
