--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,6 +16,11 @@ jobs:
         shell: bash
         run: |
           ls -l
-          ls -l caen_tools/WebService/frontend
           cd caen_tools/WebService/frontend
+          git submodule init
+          git submodule update
+          ls -l caen_tools/WebService/frontend
+          npm install
+          npm run build
+          ls -l caen_tools/WebService/frontend
 
