--- a/caen_tools/configs/config.ini
+++ b/caen_tools/configs/config.ini
@@ -4,9 +4,9 @@ host = localhost
 port = 5561
 address = ${protocol}://*:${port}
 
-dbpath = ${root_project}/monitor.db
+dbpath = ./monitor.db
 param_file_path = /home/cmd3daq/caendc/data/last_measurement.json
-channel_map_path = ${root_project}/channel_map.json
+channel_map_path = ${root_configs}/channel_map.json
 # in seconds
 max_interlock_check_delta_time = 100
 
@@ -16,7 +16,7 @@ host = localhost
 port = 5570
 address = ${protocol}://*:${port}
 
-map_config = ${root_project}/test_config.json
+map_config = ${root_configs}/test_config.json
 
 [ws]
 receive_time = 10
