--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,4 +25,5 @@ webservice=[
     "typing_extensions==4.8.0",
     "fastapi-utils==0.7.0",
     "uvicorn==0.23.2",
+    "typing-inspect==0.9.0",
 ]
