Add logging, raise errors in ws
* Implemented basis of logging
* Raised errors in Webserver (when connection is lost for example)
* Update frontend part
* Fixed ending in device backend (need to fix it in monitor in the same way)

--- a/caen_tools/configs/config.ini
+++ b/caen_tools/configs/config.ini
@@ -18,6 +18,9 @@ address = ${protocol}://*:${port}
 
 map_config = ${root_configs}/test_config.json
 
+loglevel = info
+logfile = # parameters without values means None
+
 [ws]
 receive_time = 10
 device_backend = ${device:protocol}://${device:host}:${device:port}
