--- a/caen_tools/configs/config.ini
+++ b/caen_tools/configs/config.ini
@@ -7,8 +7,11 @@ address = ${protocol}://*:${port}
 dbpath = ./monitor.db
 param_file_path = /home/cmd3daq/caendc/data/last_measurement.json
 channel_map_path = ${root_configs}/channel_map.json
-# in seconds
+# max_interlock_check_delta_time in seconds
 max_interlock_check_delta_time = 100
+
+loglevel = info
+logfile=
 
 [device]
 protocol = tcp
@@ -19,7 +22,7 @@ address = ${protocol}://*:${port}
 map_config = ${root_configs}/test_config.json
 
 loglevel = info
-logfile = # parameters without values means None
+logfile =
 
 [ws]
 receive_time = 10
@@ -27,3 +30,6 @@ device_backend = ${device:protocol}://${device:host}:${device:port}
 monitor = ${monitor:protocol}://${monitor:host}:${monitor:port}
 host = 0.0.0.0
 port = 8000
+
+loglevel = info
+logfile =
