--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name="caen-tools"
-version="1.2"
+version="1.2.1"
 requires-python=">=3.11"
 dependencies=[
     "pyzmq==25.1.1",
-    "caen-setup @ git+https://github.com/caenHV/Setup.git@main",
+    "caen-setup @ git+https://github.com/caenHV/Setup.git@v0.0.3-dev",
     "psycopg2-binary==2.9.9",
 ]
 
