--- a/caen_tools/configs/config.ini
+++ b/caen_tools/configs/config.ini
@@ -20,6 +20,8 @@ port = 5570
 address = ${protocol}://*:${port}
 
 map_config = ${root_configs}/test_config.json
+refersh_time = 1
+fake_board = true
 
 loglevel = info
 logfile =
