Moved interlock_db credentials to the config and fixed interlock read from the db.

--- a/caen_tools/configs/config.ini
+++ b/caen_tools/configs/config.ini
@@ -4,6 +4,7 @@ host = localhost
 port = 5561
 address = ${protocol}://*:${port}
 
+interlock_db_uri = postgresql://kmd:kmd@sndas0:5432/vepp2k
 dbpath = ./monitor.db
 param_file_path = /home/cmd3daq/caendc/data/last_measurement.json
 channel_map_path = ${root_configs}/channel_map.json
