--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name="caen-tools"
-version="1.5"
+version="2.0"
 requires-python=">=3.11"
 dependencies=[
     "pyzmq==25.1.1",
-    "caen-setup @ git+https://github.com/caenHV/Setup.git@dev",
+    "caen-setup @ git+https://github.com/caenHV/Setup.git@v1.1",
     "psycopg2-binary==2.9.9",
 ]
 
