Added voltage change upon interlock change.

--- a/caen_tools/configs/config.ini
+++ b/caen_tools/configs/config.ini
@@ -5,6 +5,7 @@ port = 5561
 address = ${protocol}://*:${port}
 
 interlock_db_uri = postgresql://kmd:kmd@sndas0:5432/vepp2k
+interlock_voltage_modifier = 0.4
 dbpath = ./monitor.db
 param_file_path = /home/cmd3daq/caendc/data/last_measurement.json
 # max_interlock_check_delta_time in seconds
