--- a/caen_tools/configs/config.ini
+++ b/caen_tools/configs/config.ini
@@ -34,6 +34,10 @@ monitor = ${monitor:protocol}://${monitor:host}:${monitor:port}
 host = 0.0.0.0
 port = 8000
 
+MChs_Controller_host = 
+MChs_Controller_port = 
+MChs_Controller_client_id = 10
+
 loglevel = info
 logfile =
 subscribers =
