Split webserver on webserver itself and additional SystemCheck microservice
* Add SystemCheck microservice
  * Remove check from webservice
  * Add new microservice to verify quality of parameters
  * Implement minimal API for this microservice
  * Now it can manipulate interlock
* Prepare for SSE usage (instead of websocket)
* Add senders in API parameters
* Resolve conflicts
  * Move mchs in syscheck
  * Resolve get target voltage API method for device_backend

--- a/caen_tools/configs/config.ini
+++ b/caen_tools/configs/config.ini
@@ -5,7 +5,6 @@ port = 5561
 address = ${protocol}://*:${port}
 
 interlock_db_uri = postgresql://kmd:kmd@sndas0:5432/vepp2k
-interlock_voltage_modifier = 0.4
 dbpath = ./monitor.db
 param_file_path = /home/cmd3daq/caendc/data/last_measurement.json
 # max_interlock_check_delta_time in seconds
@@ -27,16 +26,38 @@ fake_board = true
 loglevel = info
 logfile =
 
+[check]
+;Main network parameters for the service itself
+protocol = tcp
+host = localhost
+port = 5571
+address = ${protocol}://*:${port}
+
+;Addresses for the service friends
+device_backend = ${device:protocol}://${device:host}:${device:port}
+monitor = ${monitor:protocol}://${monitor:host}:${monitor:port}
+
+;Interlock follow settings
+interlock_follow = false
+interlock_voltage_modifier = 0.4
+
+;MChS settings
+mchs_host = 127.0.0.1
+mchs_port = 22
+mchs_client_id = 10
+
+;Logging
+loglevel = info
+logfile=
+
 [ws]
 receive_time = 10
 device_backend = ${device:protocol}://${device:host}:${device:port}
 monitor = ${monitor:protocol}://${monitor:host}:${monitor:port}
+system_check = ${check:protocol}://${check:host}:${check:port}
 host = 0.0.0.0
 port = 8000
-
-MChs_Controller_host = 
-MChs_Controller_port = 
-MChs_Controller_client_id = 10
+interlock_follow = false
 
 loglevel = info
 logfile =
