--- a/caen_tools/configs/config.ini
+++ b/caen_tools/configs/config.ini
@@ -37,10 +37,12 @@ address = ${protocol}://*:${port}
 device_backend = ${device:protocol}://${device:host}:${device:port}
 monitor = ${monitor:protocol}://${monitor:host}:${monitor:port}
 
-;Interlock follow settings
+;Script: Interlock Control
 interlock_follow = false
 interlock_voltage_modifier = 0.4
+interlock_db_uri = postgresql://kmd:kmd@sndas0:5432/vepp2k
 
+;Script: Parameter Health Control
 ;MChS settings
 mchs_host = 127.0.0.1
 mchs_port = 22
