--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,9 +22,8 @@ caen_system_check = "caen_tools.SystemCheck.check:main"
 webservice=[
     "fastapi==0.104.1",
     "typing_extensions==4.8.0",
-    "fastapi-utils==0.7.0",
     "uvicorn==0.23.2",
     "typing-inspect==0.9.0",
-    "websockets==13.0.1",
     "sse-starlette==2.1.3",
+    "async-lru==2.0.4",
 ]
