Added more configuration params for CAENSetup lib v1.2.

--- a/caen_tools/configs/config.ini
+++ b/caen_tools/configs/config.ini
@@ -22,6 +22,9 @@ address = ${protocol}://*:${port}
 map_config = ${root_configs}/test_config.json
 refersh_time = 1
 fake_board = true
+ramp_up_speed = 10
+ramp_down_speed = 100
+is_high_Imon_range = true
 
 loglevel = info
 logfile =
