--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version="2.2"
 requires-python=">=3.11"
 dependencies=[
     "pyzmq==25.1.1",
-    "caen-setup @ git+https://github.com/caenHV/Setup.git@v1.1.1-fix",
+    "caen-setup @ git+https://github.com/caenHV/Setup.git@v1.2.1",
     "psycopg2-binary==2.9.9",
 ]
 
