Deleted SystemCheck from Monitor microservice, added currents check up to the HealthParams. Not tested.

--- a/caen_tools/configs/config.ini
+++ b/caen_tools/configs/config.ini
@@ -4,11 +4,9 @@ host = localhost
 port = 5561
 address = ${protocol}://*:${port}
 
-interlock_db_uri = postgresql://kmd:kmd@sndas0:5432/vepp2k
 dbpath = ./monitor.db
+; ODB reads info from this file.
 param_file_path = /home/cmd3daq/caendc/data/last_measurement.json
-# max_interlock_check_delta_time in seconds
-max_interlock_check_delta_time = 100
 
 loglevel = info
 logfile=
@@ -20,10 +18,15 @@ port = 5570
 address = ${protocol}://*:${port}
 
 map_config = ${root_configs}/test_config.json
+; Time in seconds
 refersh_time = 1
 fake_board = true
+; Base speed of voltage ramping up/down, V/s 
 ramp_up_speed = 10
 ramp_down_speed = 100
+; Determines whether high res (is_high_Imon_range = false <=> 0.005 muA and max I = 300 muA) 
+; or low res (is_high_Imon_range = true <=> 0.05 muA and max I = 3000 muA) current monitor is used.
+; Follows CAEN naming convention.
 is_high_Imon_range = true
 
 loglevel = info
@@ -46,6 +49,7 @@ interlock_voltage_modifier = 0.4
 interlock_db_uri = postgresql://kmd:kmd@sndas0:5432/vepp2k
 
 ;Script: Parameter Health Control
+max_currents_map_path = ${root_configs}/max_currents_map.json
 ;MChS settings
 mchs_host = 127.0.0.1
 mchs_port = 22
