Prepare to final usage commit
Squashed commit of the following:

    Format code
    Add fake possibility for interlock db
    Fix autopilot logic
    New frontend version (auto selection of current field)
    Remove all fields from devback apimethods
    Update Monitor
      * Use ImonRange device parameter to find useful current field
    Fixup syscheck api and Down voltage on webserver
    Add ReducerControl script
    Add HealthControl
    Add InterlockControl, RelaxControl
    Add LoaderControl
    Beautify sharedmemory filling

--- a/caen_tools/configs/config.ini
+++ b/caen_tools/configs/config.ini
@@ -42,23 +42,54 @@ address = ${protocol}://*:${port}
 ;Addresses for the service friends
 device_backend = ${device:protocol}://${device:host}:${device:port}
 monitor = ${monitor:protocol}://${monitor:host}:${monitor:port}
-
-;Script: Interlock Control
-interlock_follow = false
-interlock_voltage_modifier = 0.4
 interlock_db_uri = postgresql://kmd:kmd@sndas0:5432/vepp2k
-
-;Script: Parameter Health Control
-max_currents_map_path = ${root_configs}/max_currents_map.json
-
-;MChS settings
-mchs_host = 127.0.0.1
-mchs_port = 22
-mchs_client_id = 10
 
 ;Logging
 loglevel = info
 logfile=
+
+[check.loader]
+;Moves data from devback to monitor
+enable = true
+repeat_every = 1
+
+[check.health]
+;Health parameters control
+enable = true
+repeat_every = 1
+max_currents_map_path = ${root_configs}/max_currents_map.json
+
+[check.interlock]
+;Interlock settings (reads interlock to have actual values for MChS)
+enable = true
+repeat_every = 1
+
+[check.autopilot]
+;Autopilot settings
+enable = false
+voltage_modifier = 0.4
+target_voltage = 1
+
+[check.autopilot.relax]
+;Relax settings
+enable = ${check.autopilot:enable}
+repeat_every = 15
+voltage_modifier = ${check.autopilot:voltage_modifier}
+target_voltage = ${check.autopilot:target_voltage}
+
+[check.autopilot.reducer]
+;Scheduled reducer settings
+enable = ${check.autopilot:enable}
+repeat_every = 1800
+reducing_period = 60
+voltage_modifier = ${check.autopilot:voltage_modifier}
+target_voltage = ${check.autopilot:target_voltage}
+
+[check.mchs]
+;MChS settings
+host = 127.0.0.1
+port = 22
+client_id = 10
 
 [ws]
 receive_time = 10
@@ -67,7 +98,6 @@ monitor = ${monitor:protocol}://${monitor:host}:${monitor:port}
 system_check = ${check:protocol}://${check:host}:${check:port}
 host = 0.0.0.0
 port = 8000
-interlock_follow = false
 
 loglevel = info
 logfile =
