--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,12 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name="caen-tools"
-version="2.2.2"
+version="2.2.3"
 requires-python=">=3.11"
 dependencies=[
     "pyzmq==25.1.1",
     "caen-setup @ git+https://github.com/caenHV/Setup.git@v1.2.2",
+    "psycopg==3.2.3",
     "psycopg-binary==3.2.3",
 ]
 
