--- a/caen_tools/configs/config.ini
+++ b/caen_tools/configs/config.ini
@@ -17,7 +17,7 @@ host = localhost
 port = 5570
 address = ${protocol}://*:${port}
 
-map_config = ${root_configs}/test_config.json
+map_config = ${root_configs}/map_config.json
 ; Time in seconds
 refersh_time = 1
 fake_board = true
