--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,9 +2,12 @@
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools]
+py-modules = []
+
 [project]
 name="caen-tools"
-version="2.2.4"
+version="2.2.5"
 requires-python=">=3.11"
 dependencies=[
     "pyzmq==25.1.1",
