Implemented trip time feature.

--- a/caen_tools/configs/config.ini
+++ b/caen_tools/configs/config.ini
@@ -57,7 +57,7 @@ repeat_every = 1
 ;Health parameters control
 enable = true
 repeat_every = 1
-max_currents_map_path = ${root_configs}/max_currents_map.json
+health_check_config_path = ${root_configs}/health_check_config.json
 
 [check.interlock]
 ;Interlock settings (reads interlock to have actual values for MChS)
