Added control of daq flow: if some channels are in ramp up/down state, MCHS is locked.

--- a/caen_tools/configs/config.ini
+++ b/caen_tools/configs/config.ini
@@ -85,6 +85,11 @@ reducing_period = 60
 voltage_modifier = ${check.autopilot:voltage_modifier}
 target_voltage = ${check.autopilot:target_voltage}
 
+[check.autopilot.ramp_guard]
+;Ramp guard settings
+enable = ${check.autopilot:enable}
+repeat_every = 1
+
 [check.mchs]
 ;MChS settings
 host = 127.0.0.1
