Move RampGuard to HealthControl
* Add check of low voltage in HealthControl
  * Send NACK if defined voltage lower than some level

--- a/caen_tools/configs/config.ini
+++ b/caen_tools/configs/config.ini
@@ -58,6 +58,7 @@ repeat_every = 1
 enable = true
 repeat_every = 1
 health_check_config_path = ${root_configs}/health_check_config.json
+low_voltage_mlt = 0.5
 
 [check.interlock]
 ;Interlock settings (reads interlock to have actual values for MChS)
@@ -84,11 +85,6 @@ repeat_every = 1800
 reducing_period = 60
 voltage_modifier = ${check.autopilot:voltage_modifier}
 target_voltage = ${check.autopilot:target_voltage}
-
-[check.autopilot.ramp_guard]
-;Ramp guard settings
-enable = ${check.autopilot:enable}
-repeat_every = 1
 
 [check.mchs]
 ;MChS settings
