Added solution to the issue Write statuses to monitor #19. Also changed some of the logs from info to debug regime and vice versa.

--- a/caen_tools/configs/config.ini
+++ b/caen_tools/configs/config.ini
@@ -5,8 +5,9 @@ port = 5561
 address = ${protocol}://*:${port}
 
 dbpath = ./monitor.db
-; ODB reads info from this file.
+; ODB reads info from these files.
 param_file_path = /home/cmd3daq/caendc/data/last_measurement.json
+status_file_path = /home/cmd3daq/caendc/data/current_status.json
 
 loglevel = info
 logfile=
